RESOLVED FIXED238684
[iOS] WKFullScreenWindowController's UIViewController leaks after entering element fullscreen
https://bugs.webkit.org/show_bug.cgi?id=238684
Summary [iOS] WKFullScreenWindowController's UIViewController leaks after entering el...
Wenson Hsieh
Reported 2022-04-01 15:16:49 PDT
(Just a memory leak I spotted while working on related code)
Attachments
Patch (1.99 KB, patch)
2022-04-01 15:19 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2022-04-01 15:19:47 PDT
Wenson Hsieh
Comment 2 2022-04-01 17:39:33 PDT
Comment on attachment 456408 [details] Patch Thanks for the review!
EWS
Comment 3 2022-04-01 20:43:48 PDT
Found 1 new test failure: http/tests/privateClickMeasurement/store-private-click-measurement-with-source-nonce.html
EWS
Comment 4 2022-04-01 23:34:30 PDT
Committed r292261 (249159@main): <https://commits.webkit.org/249159@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456408 [details].
Radar WebKit Bug Importer
Comment 5 2022-04-01 23:35:15 PDT
Note You need to log in before you can comment on or make changes to this bug.