[iOS] WKFullScreenWindowController's UIViewController leaks after entering element fullscreen https://bugs.webkit.org/show_bug.cgi?id=238684

Reviewed by Eric Carlson.

The window controller's `_rootViewController` is a `RetainPtr`, but we're missing an `adoptNS` when creating a
new view controller. Fix the leak by using `adoptNS` to prevent the redundant `-retain` when constructing
`RetainPtr`.

* UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:
(-[WKFullScreenWindowController enterFullScreen]):



Canonical link: https://commits.webkit.org/249159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292261 268f45cc-cd09-0410-ab3c-d52691b4dbfc